--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,8 @@ dependencies {
     // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.15.2'
 
+    implementation 'com.android.volley:volley:1.2.1'
+
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
 
 }
